// SonarLint, open source software quality management tool.
// Copyright (C) 2015-2023 SonarSource
// mailto:contact AT sonarsource DOT com
//
// SonarLint is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public
// License as published by the Free Software Foundation; either
// version 3 of the License, or (at your option) any later version.
//
// SonarLint is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
// Lesser General Public License for more details.
//
// You should have received a copy of the GNU Lesser General Public License
// along with this program; if not, write to the Free Software Foundation,
// Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

syntax = "proto2";

package sonarqube.ws.qualityprofiles;

option java_package = "org.sonarsource.sonarlint.core.serverapi.proto.sonarqube.ws";
option java_outer_classname = "Qualityprofiles";
option optimize_for = SPEED;

// WS api/qualityprofiles/search
message SearchWsResponse {
  repeated QualityProfile profiles = 1;

  message QualityProfile {
    optional string key = 1;
    optional string name = 2;
    optional string language = 3;
    optional string languageName = 4;
    optional bool isDefault = 8;
    optional int64 activeRuleCount = 9;
    optional string rulesUpdatedAt = 11;
    optional string userUpdatedAt = 14;
  }

}
